<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/music_bg"
    android:orientation="vertical" >
    <ImageView 
        android:id="@+id/i_want"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/i_want_to_hear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10"/>

    <ImageView
        android:id="@+id/music_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cover_flow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-28dp"
        android:src="@drawable/line" />

   <!--   <ImageView
        android:id="@+id/music_null"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@+id/music_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/music_category_default"
       android:visibility="gone" />-->

    <com.tuyou.tsd.news.weight.CoverFlow
        android:id="@+id/cover_flow"
        android:layout_width="460dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:spacing="@dimen/dimen_10"
        android:visibility="visible" 
        android:layout_marginTop="@dimen/dimen_20"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/music_list_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/music_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/music_list_select" />

            <TextView
                android:id="@+id/music_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dimen_60"
                android:text="@string/app_name"
                android:textColor="@drawable/music_list_text_select"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/music_list_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/music_list_point_select" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progress_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/music_list_layout"
            android:layout_marginBottom="10dp" >

            <ProgressBar
                android:id="@+id/music_play_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/barcolor"
                android:secondaryProgress="0" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_layout" >

            <LinearLayout 
                android:id="@+id/music_love"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/subscribe_white_select"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_10"
                android:gravity="center">
                <TextView 
                    android:id="@+id/add_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_love"
                    android:textColor="@color/blue"
                    android:gravity="center"/>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="-4dp"
                android:layout_toRightOf="@id/music_love"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimen_10" >

                <TextView
                    android:id="@+id/music_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:maxWidth="200dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:focusable="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusableInTouchMode="true"/>

                <TextView
                    android:id="@+id/music_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:maxWidth="200dp"
                    android:singleLine="true"
                    android:ellipsize="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/music_prew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/music_prew_select" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/music_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/music_pause_select" />

                    <ImageView
                        android:id="@+id/music_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/loading"
                        android:visibility="gone" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/music_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/music_next_select" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:background="@drawable/subscribe_select"
        android:gravity="center"
        android:layout_marginTop="40dp" >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/subscribe_me"
            android:textColor="@drawable/text_color"
            android:textSize="@dimen/text_size_20"
            android:gravity="center"/>
        <ImageView 
            android:id="@+id/subscribe_point"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/subscribe_point_select"/>
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/can_not_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/cannot_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true" >

                <TextView
                    android:id="@+id/can_not_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cannot_message"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18" />

                <Button
                    android:id="@+id/can_not_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/can_not_message"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:background="@drawable/know_select"
                    android:text="@string/know"
                    android:textColor="@drawable/text_w_g_select"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>